# rusty-trains

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE  README.md  analyse.py  analysis.ipynb  config_physics.yaml  config_timing.yaml  network.xml  plot.py  pyproject.toml  run_100trains.py
.claude/commands/: fix-issue.md  review.md  start-task.md
.claude/skills/start-task/: SKILL.md
.github/workflows/: ci.yml
.opencode/agents/: reviewer.md
config/: config_ecm1_real.yaml  config_infrastructure.yaml  config_mixed.yaml  config_physics.yaml  config_railml.yaml
crates/sim-control/: Cargo.toml
crates/sim-engine/: Cargo.toml
crates/sim-events/: Cargo.toml
crates/sim-infra/: Cargo.toml
crates/sim-passenger/: Cargo.toml
crates/sim-perturb/: Cargo.toml
crates/sim-physics/: Cargo.toml
crates/sim-railml/: Cargo.toml
crates/sim-railml/src/: infrastructure.rs  lib.rs  xml_util.rs
crates/sim-runner/: Cargo.toml
crates/sim-timetable/: Cargo.toml
crates/sim-timetable/src/: lib.rs
crates/sim-train/: Cargo.toml
crates/sim-types/: Cargo.toml
crates/sim-types/src/: lib.rs
docs/: 01-core-domain-classes.mmd  02-replatforming-sequence.mmd  03-train-state-machine.mmd  ARCHITECTURE.md  PHYSICS.md  ROADMAP.md  assets.md  infrastructure.md  interlocking.md  railml-infrastructure.md  railml.md  rollingstock.md
examples/ecm1/: ecm1_network.xml
python/: RAILML.md
python/hs_trains/: ecm1_route_map.py  gtcl.py  make_ecm1_railml.py  make_gtcl_railml.py  make_railml_rollingstock.py  make_timing_parquet.py  network_map.py  rollingstock_ui.py  run_100trains.py  tps.py  train_cinematic.py  utils.py
python/hs_trains/model/: common.py  infrastructure.py  rollingstock.py
python/model/: rollingstock.py
python/rusty_trains/: make_railml_rollingstock.py  make_timing_parquet.py  plot.py  rollingstock_ui.py  run_100trains.py  utils.py
python/rusty_trains/model/: rollingstock.py
python/tests/: test_gtcl.py  test_infrastructure.py  test_rollingstock.py  test_tps.py
scripts/: make_timing_parquet.py  plot.py  run_100trains.py
src/: lib.rs  main.rs  model.rs  physics.rs  rollingstock.rs  scheduler.rs  timing.rs
src/core/: mod.rs  model.rs  physics.rs
src/io/: mod.rs  railml_infrastructure.rs  railml_rollingstock.rs  railml_timetable.rs  xml_util.rs
