[workspace]
resolver = "2"
members = [
    "crates/sim-types",
    "crates/sim-events",
    "crates/sim-railml",
    "crates/sim-infra",
    "crates/sim-timetable",
    "crates/sim-train",
    "crates/sim-physics",
    "crates/sim-passenger",
    "crates/sim-engine",
    "crates/sim-control",
    "crates/sim-perturb",
    "crates/sim-runner",
]
