[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/model"]

[tool.hatch.build.targets.wheel.force-include]
"python/make_railml_rollingstock.py" = "make_railml_rollingstock.py"
"python/make_timing_parquet.py"      = "make_timing_parquet.py"
"python/run_100trains.py"            = "run_100trains.py"
"python/plot.py"                     = "plot.py"

[project.scripts]
make-railml-rollingstock = "make_railml_rollingstock:main"
make-timing-parquet = "make_timing_parquet:main"
run-100trains = "run_100trains:app"
plot = "plot:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project]
name = "rusty-trains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "pydantic>=2.0",
    "pydantic-xml>=2.0",
    "xmlschema>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
