[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/rusty_trains"]

[project.scripts]
make-railml-rollingstock = "rusty_trains.make_railml_rollingstock:main"
make-timing-parquet = "rusty_trains.make_timing_parquet:main"
run-100trains = "rusty_trains.run_100trains:app"
plot = "rusty_trains.plot:main"
rollingstock-editor = "rusty_trains.rollingstock_ui:launch"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project]
name = "rusty-trains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "polars>=1.0",
    "pyarrow>=23.0.1",
    "nicegui>=2.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "pydantic>=2.0",
    "pydantic-xml>=2.0",
    "xmlschema>=3.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
