[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/hs_trains"]

[project.scripts]
make-railml-rollingstock = "hs_trains.make_railml_rollingstock:main"
make-timing-parquet = "hs_trains.make_timing_parquet:main"
run-100trains = "hs_trains.run_100trains:app"
plot = "hs_trains.plot:main"
rollingstock-editor = "hs_trains.rollingstock_ui:launch"
network-map = "hs_trains.network_map:app"
make-gtcl-railml = "hs_trains.make_gtcl_railml:main"
make-ecm1-railml = "hs_trains.make_ecm1_railml:app"
ecm1-route-map = "hs_trains.ecm1_route_map:app"
train-cinematic = "hs_trains.train_cinematic:app"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov",
    "pandas",
    "ipykernel",
]

[project]
name = "hs-trains"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "polars>=1.0",
    "pyarrow>=23.0.1",
    "nicegui>=2.0",
    "pyyaml>=6.0.3",
    "typer>=0.24.1",
    "pydantic>=2.0",
    "pydantic-xml>=2.0",
    "xmlschema>=3.0",
    "geopandas>=1.0",
    "plotly>=6.0",
]

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
